Fixed overflow on body

--- a/public/style/style-new.css
+++ b/public/style/style-new.css
@@ -26,6 +26,7 @@
 
 body {
   background-color: var(--bg-color);
+  overflow: hidden;
 }
 
 /* ! Navbar Start  */
